--- a/style.css
+++ b/style.css
@@ -1,9 +1,52 @@
 body {
-    background-color: rgb(156, 167, 233);
-    text-align: center;
-    color: red;
+    background-color: rgb(114, 166, 214);
+    color: rgb(42, 121, 211);
 }
 h1 {
+    font-size: 40px;
+    color: black;
+    font-family: fantasy;
+    font-weight: normal;
     text-align: center;
-    color: rgb(255, 0, 0);
 }
+p {
+    color: black;
+}
+h2 {
+font-size:25px;
+color: black;
+text-align: center;
+
+}
+h3 {
+font-size: 40px;
+font-family: fantasy;
+color: rgb(255, 255, 255);
+text-decoration: underline; text-decoration-style: dashed; 
+font-weight: normal;
+text-align:center;
+
+
+}
+p {
+font-size:25px;
+border: 5px solid;
+border-color: white;
+padding: 15px;
+text-align: center;
+color: black;
+
+
+
+}
+hr {
+    color: red;
+}
+h4 {
+text-align: center;
+font-size: 25px;
+color: black;
+
+
+}
+
