--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ h1 {
     text-align: center;
 }
 p {
-    color: black;
+    color: red;
 }
 h2 {
 font-size:25px;
@@ -22,20 +22,20 @@ h3 {
 font-size: 40px;
 font-family: fantasy;
 color: rgb(255, 255, 255);
-text-decoration: underline; text-decoration-style: dashed; 
+text-decoration: underline; text-decoration-style: solid; text-decoration-color: black;
 font-weight: normal;
 text-align:center;
 
 
 }
-p {
+p, li {
 font-size:25px;
 border: 5px solid;
 border-color: white;
 padding: 15px;
 text-align: center;
 color: black;
-
+font-family: 'Times New Roman', Times, serif;
 
 
 }
@@ -49,4 +49,13 @@ color: black;
 
 
 }
-
+img {
+position: relative;
+border: 3px solid black;
+margin: 0 auto;
+}
+ul {
+list-style-type: square;
+list-style-position: inside;
+padding-right: 50px;
+}
